<resources>
    <string name="app_name">PLS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="number_caption">НОМЕР</string>
    <string name="from_caption">ОТКУДА</string>
    <string name="from_where_caption">ОТКУДА (КУДА)</string>
    <string name="where_caption">КУДА</string>

    <string name="number">O20161812183939777</string>
    <string name="from">220083 [ИЛЦ ЮГ г.Астана]</string>
    <string name="where">Почтовый вагон №1</string>


    <string name="btnScannerSelectBarcode">Scanner Selection Example</string>
    <string name="btnSwitchScanners">Switch Scanners</string>
    <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="vpn_title">ВПН:</string>
    <string name="departure_time">Время отправки</string>
    <string name="arrival_time">Время прибытия</string>
    <string name="name">Наименование</string>
    <string name="index">Индекс</string>
    <string name="number_sign">№</string>
    <string name="of_karagandy">ОФ Карагандинский</string>
    <string name="retrieve">Принять</string>
    <string name="no_data">Нет данных по запросу</string>
    <string name="collate">Сличить</string>
    <string name="ok">OK</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="exit_dialog_text">Вы уверены что хотите выйти?</string>
    <string name="btn_scan_text">Сканировать</string>
    <string name="enter_code">Введите код емкости или просканируйте</string>
    <string name="empty_routes">У вас нет маршрутов</string>
    <string name="astana17">Астана-17</string>
    <string name="title_volumes_fragment">Для создания Общей накладной выберите емкости из списка</string>
    <string name="form_general_invoice">Сформировать общую накладную</string>
    <string name="no_data_get">Нет накладных для принятия</string>
    <string name="no_send_invoice">нет накладной для добавления</string>
    <string name="last_point">Вы достигли конечной точки маршрута, пожалуйста авторизуйтесь заново и выберите другой маршрут</string>
    <string name="login">ЛОГИН</string>
    <string name="pswd">ПАРОЛЬ</string>
    <string name="loginbtn">ВОЙТИ</string>
    <string name="surname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="some_error">Some Error Occurred!</string>

</resources>
