<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.kazpost.toolpar.ui.CollateNewFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/ll_fragment_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_code" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_scan_text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_caption_collate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_fragment_accept"
        android:layout_marginBottom="8dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_caption"
            android:textAlignment="center"
            android:textStyle="bold" />

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_caption"
            android:textAlignment="center"
            android:textStyle="bold" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/where_caption"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_collate_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_caption_collate"
        android:layout_marginBottom="60dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_no_data_accept_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textSize="22sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_collate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/collate" />

    <ProgressBar
        android:id="@+id/progress_accept_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
