<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.startandroid.retrofit.ui.AcceptGenInvoiceFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/ll_fragment_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_scan"
            android:hint="@string/enter_code"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan_text"/>
    </LinearLayout>

    <ListView
        android:layout_below="@id/ll_fragment_accept"
        android:id="@+id/list_view_accept_gen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_no_data_accept_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textSize="22sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_collate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/collate" />

    <ProgressBar
        android:id="@+id/progress_accept_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
