<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.startandroid.retrofit.ui.HistoryFragment">

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_caption"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_caption"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/where_caption"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_data_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data"
        android:textSize="22sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:scrollbars="vertical"
        android:id="@+id/rv_fragment_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_history" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_history"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
