<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.startandroid.retrofit.ui.VolumesFragment">

    <LinearLayout
        android:id="@+id/ll_btn_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/tv_header_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/title_volumes_fragment"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_attach_to_invoice"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/form_general_invoice"
            android:textColorHighlight="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="0dp"
        android:layout_height="842dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ll_btn_hint"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_btn_hint"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ll_btn_hint">

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_caption"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_caption"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/where_caption"
                android:textAlignment="center"
                android:textStyle="bold" />


        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_fragment_volumes"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_no_data_volumes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
