<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005AAB"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:padding="25dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/kazpost_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/white_logo" />

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress_login"/>


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round">


            <ImageView
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/user_icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:hint="@string/login"
                android:textColorHint="@android:color/white"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="23sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_pswd"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@drawable/round">


            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="60dp"
                android:padding="5dp"
                android:layout_height="40dp"
                android:src="@drawable/pswd_blue" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/round"
                android:hint="@string/pswd"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="23sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/round_blue"
            android:text="@string/loginbtn"
            android:textColor="#4FC3F7"
            android:textSize="21sp" />

    </LinearLayout>

</LinearLayout>